tests/invalids/missingRef.gt
proc f (int m)
begin
    m := n;
end

proc main ()
begin 
    m := n;
end
